# Exegol-history

./: .gitignore  README.md  mise.toml  pyproject.toml
exegol_history/: __main__.py
exegol_history/cli/: arguments.py  functions.py  utils.py
exegol_history/config/: config.py  config.toml
exegol_history/connectors/metasploit/: metasploit_sync.py  utils.py
exegol_history/connectors/netexec/: netexec_sync.py
exegol_history/connectors/nxc/: nxc_workspace_syncer.py
exegol_history/db_api/: creds.py  exporting.py  hosts.py  importing.py  sync.py  utils.py
exegol_history/targets/: nmap_xml.py
exegol_history/tests/: common.py  conftest.py  test_nmap_xml.py
exegol_history/tests/artifacts/: config.toml  creds.json  hosts.json  sample_nmap.xml  test.kdbx  test.sqlite3
exegol_history/tests/cli_tests/: test_add_credential_cli.py  test_add_host_cli.py  test_delete_credential_cli.py  test_delete_host_cli.py  test_edit_credential_cli.py  test_edit_host_cli.py  test_export_credential_cli.py  test_export_host_cli.py  test_import_credential_cli.py  test_import_host_cli.py  test_sync_cli.py  test_sync_credential_cli.py  test_sync_host_cli.py  test_unset_credential_cli.py  test_unset_host_cli.py
exegol_history/tests/tui_tests/: test_add_credential_tui.py  test_add_host_tui.py  test_delete_credential_tui.py  test_delete_host_tui.py  test_edit_credential_tui.py  test_edit_host_tui.py  test_export_credential_tui.py  test_export_host_tui.py  test_set_host_tui.py  (+3 more)
exegol_history/tui/: db_creds.py  db_hosts.py  targets.py
packaging/: exegol-history.spec  pyinstaller_entry.py
(+14 files in other folders)
